--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -495,8 +495,9 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 <dd>Report instalment or annuity payments you made under <abbr title="Deferred profit sharing plan">DPSP</abbr> using box 024 <strong>and</strong> <a href="#cd115">code 115</a>. </dd>
 <dt>Life income fund or registered retirement income fund</dt>
 <dd>Report annuity payments from a life annuity purchased from the proceeds of a life income fund or from the proceeds of a registered retirement income fund.</dd>
-<dt>Advanced life deferred</dt>
-<dd><p>Report only annuity payments from an Advanced life deferred annuity in box <strong>024</strong>, see ALDA purchases in code&nbsp;037</p>
+<dt><abbr title="Advanced life deferred annuity">ALDA</abbr> </dt>
+<dd><p>Report <strong>only</strong> annuity payments from an advanced life deferred annuity in box <strong>024</strong>.</p>
+<p><strong>Do not</strong> report total <strong>annuity purchased</strong> using box 024, use <a href="#cd037">code 037</a>. </p>
 </dd>
 <dt><abbr title="Income-averaging annuity contract">IAAC</abbr></dt>
 <dd>Report annuity payments you made under an <abbr title="income-averaging annuity contract">IAAC</abbr> using box 024 <strong>and</strong> <a href="#cd111">code 111</a>. </dd>
@@ -616,10 +617,12 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 </li>
 <li class="code-num"> 
  <details >  <summary>Code 037 – Advanced life deferred annuity purchase</summary> 
-  <p id="cd037">An ALDA is a new type of annuity where the annuitant can defer commencing annuity payments up until the end of the year they turn 85 years of age.</p> 
-  <p>Report the total annuity amount purchased. If an amount exceeding the individual’s lifetime limit has been purchased, the excess amount that is transferred back to a qualified registered plan must be reported as a negative amount in this box.<strong> Do not report this amount in box 024</strong>.</p> 
+  <p id="cd037">Report the total annuity amount purchased. </p> 
+<p>If an amount exceeding the individual’s lifetime limit has been purchased, the excess amount that is transferred back to a qualified registered plan must be reported as a negative amount in this box.</p> 
+<p><strong>Do not</strong> report annuity payments from an advanced life deferred annuity using code 037, use <a href="#bx024">box 024</a>.</p>
   </details> 
   </li>
+
 <li class="code-num">
  <details>  <summary>Code 040 – RESP accumulated income payments</summary> 
   <p id="cd040">If you are the promoter of a RESP and you paid <abbr title="registered education savings plan">RESP</abbr> accumulated income payments to a subscriber of the plan, report this amount in the "Other information" area using code&nbsp;<strong>040</strong>.</p> 
