--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -616,8 +616,8 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
  </details>
 </li>
 <li class="code-num"> 
- <details >  <summary>Code 037 – Advanced life deferred annuity purchase</summary> 
-  <p id="cd037">Report the total annuity amount purchased. </p> 
+ <details >  <summary>Code 037 – Advanced life deferred annuity purchase <span class="label label-warning">Jeremiah</span></summary> 
+  <p id="cd037">Report the total amount for the advance life deferred annuity purchased. </p> 
 <p>If an amount exceeding the individual’s lifetime limit has been purchased, the excess amount that is transferred back to a qualified registered plan must be reported as a negative amount in this box.</p> 
 <p><strong>Do not</strong> report annuity payments from an advanced life deferred annuity using code 037, use <a href="#bx024">box 024</a>.</p>
   </details> 
