--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
@@ -504,15 +504,19 @@ margin-left: 38px;
             <ul>
                <li>the work is done by an approved third-party entity
  <details>
-  <summary>Review approved third parties</summary>
-<ul>
-               <li>Corporations resident in Canada</li>
+  <summary>Review approved entities and third-party entities</summary>
+	 <p>Approved entities</p>
+	 <ul>
+              
                 <li>Approved associations</li>
                 <li>Approved universities, colleges, and research institutes or similar institutions</li>
-                <li>Non-profit SR&amp;ED corporations resident in Canada and exempt from tax</li>
                 <li>Approved organizations (granting councils) that make payments to an association, institution, or corporation identified above</li>
                         </ul>
-  
+	 <p>Third-party entities</p>
+	 <ul>
+		  <li>Corporations resident in Canada</li>
+                <li>Non-profit SR&amp;ED corporations resident in Canada and exempt from tax</li>
+
 </details>		    
 		    </li>
                <li>the work relates to the claimant’s business </li>
