--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
@@ -505,14 +505,15 @@ margin-left: 38px;
                <li>the work is done by an approved third-party entity
  <details>
   <summary>Review approved entities and third-party entities</summary>
-	 <p>Approved entities</p>
+	 <p><strong>Approved entities</strong></p>
 	 <ul>
               
                 <li>Approved associations</li>
                 <li>Approved universities, colleges, and research institutes or similar institutions</li>
                 <li>Approved organizations (granting councils) that make payments to an association, institution, or corporation identified above</li>
                         </ul>
-	 <p>Third-party entities</p>
+	 <p></p>
+	 <p><strong>Third-party entities</strong></p>
 	 <ul>
 		  <li>Corporations resident in Canada</li>
                 <li>Non-profit SR&amp;ED corporations resident in Canada and exempt from tax</li>
