--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -489,19 +489,19 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
         
  <h4 id="bx024">Specific situations</h4>
 <dl class="dl-horizontal">
-<dt>Deceased annuitant's <abbr title="Registered retirement savings plan">RRSP</abbr></dt>
-<dd>Report payments from an annuity that an individual bought with a refund of premiums from a deceased annuitant's RRSP using box 024.</dd>
-<dt><abbr title="Deferred profit sharing plan">DPSP</abbr> payments</dt>
-<dd>Report instalment or annuity payments you made under <abbr title="Deferred profit sharing plan">DPSP</abbr> using box 024 <strong>and</strong> <a href="#cd115">code 115</a>. </dd>
+<dt><abbr title="Registered retirement savings plan">RRSP</abbr></dt>
+<dd>Report payments from an annuity that an individual bought with a refund of premiums from a deceased annuitant's registered retirement savings plan (<abbr title="Registered retirement savings plan">RRSP</abbr>) using box 024.</dd>
+<dt><abbr title="Deferred profit sharing plan">DPSP</abbr></dt>
+<dd>Report instalment or annuity payments you made under a deferred profit sharing plan (<abbr title="Deferred profit sharing plan">DPSP</abbr>) using box 024 <strong>and</strong> <a href="#cd115">code 115</a>. </dd>
+<dt><abbr title="Income-averaging annuity contract">IAAC</abbr></dt>
+<dd>Report annuity payments you made under an income-averaging annuity contract (<abbr title="income-averaging annuity contract">IAAC</abbr>) using box 024 <strong>and</strong> <a href="#cd111">code 111</a>. </dd>
+<dt>Pension or superannuation</dt>
 <dt>Life income fund or registered retirement income fund</dt>
 <dd>Report annuity payments from a life annuity purchased from the proceeds of a life income fund or from the proceeds of a registered retirement income fund.</dd>
 <dt><abbr title="Advanced life deferred annuity">ALDA</abbr> </dt>
-<dd><p>Report <strong>only</strong> annuity payments from an advanced life deferred annuity in box <strong>024</strong>.</p>
+<dd><p>Report <strong>only</strong> annuity payments from an advanced life deferred annuity (<abbr title="Advanced life deferred annuity">ALDA</abbr>) using box 024.</p>
 <p><strong>Do not</strong> report total <strong>annuity purchased</strong> using box 024, use <a href="#cd037">code 037</a>. </p>
 </dd>
-<dt><abbr title="Income-averaging annuity contract">IAAC</abbr></dt>
-<dd>Report annuity payments you made under an <abbr title="income-averaging annuity contract">IAAC</abbr> using box 024 <strong>and</strong> <a href="#cd111">code 111</a>. </dd>
-<dt>Pension or superannuation</dt>
 <dd><strong>Do not</strong> report annuity payments you paid to an employee, retired employee, or survivor or spouse of an employee out of, or under, a superannuation or pension fund or plan, including disability benefits paid&nbsp;as a life annuity, use <a href="#bx016">box 016</a>.</dd>
 <dt>Life insurance policy </dt>
 <dd><strong>Do not</strong> report annuity payments for accrued income from a life insurance policy that you include when you calculate a person's income, use the <a href="/en/revenue-agency/services/forms-publications/forms/t5.html">T5 slip</a>.</dd>
