--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -506,6 +506,9 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 <p><strong>Do not</strong> report total <strong>annuity purchased</strong> using box 024, use <a href="#cd037">code 037</a>. </p>
 </dd>
 
+<dt><abbr title="Variable payment life annuity">VPLA</abbr> </dt>
+<dd><strong>Do not</strong> report annuity payments you made under a variable payment life annuity (<abbr title="Variable payment life annuity">VPLA</abbr>), use <a href="#cd133">code 133</a>.</dd>
+
 <dt>Pension or superannuation</dt>
 <dd><strong>Do not</strong> report annuity payments you paid to an employee, retired employee, or survivor or spouse of an employee out of, or under, a superannuation or pension fund or plan, including disability benefits paid&nbsp;as a life annuity, use <a href="#bx016">box 016</a>.</dd>
 
@@ -821,11 +824,11 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
  </details> 
  </li>
 <li class="code-num">
-<details >  <summary>Code 133 – Variable pension benefits</summary> 
-  <p id="cd133">Report variable pension benefits paid out of a money purchase <abbr title="registered pension plan">RPP</abbr>.</p> 
-<p>Report the variable payment life annuity amount paid from a <abbr title="pool registered pension plan">PRPP</abbr> and money purchase RPP.</p>
+<details >  <summary>Code 133 – Variable pension benefits <span class="label label-warning">Jeremiah</span></summary> 
+  <p id="cd133">Report variable payment life annuity (<abbr title="Variable payment life annuity">VPLA</abbr>) paid out of a money purchase from a <abbr title="registered pension plan">RPP</abbr> and a <abbr title="pool registered pension plan">PRPP</abbr>.</p>
  </details> 
  </li>
+
 <li class="code-num">
 <details>  <summary>Code 134 – Tax-free savings account (TFSA) taxable amount <span class="label label-warning">Jeremiah - Not mentioned on the webpage?</span></summary> 
   <p  id="cd134">Report the amount of the taxable benefit you paid during the exempt period to a beneficiary who is a resident of Canada.</p>
