--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -485,7 +485,7 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
           </li>
 				<li class="box-num">  	 
                          
-     <details>    <summary>Box 024 – Annuities <span class="label label-warning">In progress</span></summary>
+     <details>    <summary>Box 024 – Annuities <span class="label label-warning">Jeremiah</span></summary>
         
  <h4 id="bx024">Specific situations</h4>
 <dl class="dl-horizontal">
@@ -627,9 +627,9 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 </li>
 <li class="code-num"> 
  <details >  <summary>Code 037 – Advanced life deferred annuity purchase <span class="label label-warning">Jeremiah</span></summary> 
-  <p id="cd037">Report the total amount for the advance life deferred annuity purchased. </p> 
+  <p id="cd037">Report the total amount for the <abbr title="Advanced life deferred annuity">ALDA</abbr> purchased. </p> 
 <p>If an amount exceeding the individual’s lifetime limit has been purchased, the excess amount that is transferred back to a qualified registered plan must be reported as a negative amount in this box.</p> 
-<p><strong>Do not</strong> report annuity payments from an advanced life deferred annuity using code 037, use <a href="#bx024">box 024</a>.</p>
+<p><strong>Do not</strong> report annuity payments from an <abbr title="Advanced life deferred annuity">ALDA</abbr> using code 037, use <a href="#bx024">box 024</a>.</p>
   </details> 
   </li>
 
