--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -379,7 +379,7 @@
  <details><summary>Box 016 – Pension or superannuation <span class="label label-warning">In progress</span></summary>
           <p id="bx016">Report the amount for the taxable portion of annuity payments you paid to an employee, retired employee, or survivor or spouse of an employee out of, or under, a superannuation or registered pension fund or plan, including disability benefits paid&nbsp;as a life annuity.</p>
 
- <h4>Special situations</h4>
+ <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Unregistered pension plan</dt>
 <dd></dd>
@@ -388,7 +388,9 @@
 <dt>Retirement compensation arrangement</dt>
 <dd></dd>
 <dt>Indian (exempt income)</dt>
-<dd></dd>
+<dd><strong>Do not</strong> report tax-exempt pension or superannuation income you paid to a recipient who is registered, or entitled to be registered under the Indian Act using box 016, use <a href="#cd146">code 146</a>.
+</dd>
+
 <dt>Disability benefits</dt>
 <dd></dd>
 <dt>Veterans' benefits</dt>
@@ -403,7 +405,6 @@
 <li>Include <strong>disability benefits paid as a life annuity</strong> out of a superannuation or RPP in box <strong>016</strong>. Include any <strong>other disability benefits</strong> paid out of superannuation or pension plan in the &quot;Other information&quot; area, using code 125</li>
 <li>If you made payments out of an <strong>employee benefit plan (EBP)</strong> that are not payments of superannuation or pension benefits, these should be reported on a T4 slip. Learn more: <a href="/cra-arc/payroll/file/t4slip.html">T4 slip - Information for employers</a></li>
 <li>Do not include amounts paid out of a <strong>retirement compensation arrangement</strong>. Use a <a href="/cra-arc/payroll/file/t4arcaslip.html">T4A-RCA slip, Statement of Distributions from a Retirement Compensation Arrangement (RCA)</a> for these amounts</li>
-<li><strong>Indian (exempt income) – pension or superannuation</strong>&nbsp;– Pension or superannuation income is usually exempt from tax when a person receives it as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt. <strong>Do not</strong> include exempt income in box 016. Instead, include it in “Other information” using code 146</li>
 <li>Include veterans' benefits eligible for pension splitting in box 016. Certain veterans’ benefits eligible for pension splitting are also reported using code 128 </li>
 </ul>
                 </details>
@@ -436,30 +437,36 @@
 </ul></li>
 </ul>
 
- <h4>Special situations</h4>
+ <h4>Specific situations</h4>
 <dl class="dl-horizontal">
-<dt><abbr title="Deferred profit sharing plan">DPSP</abbr> payments</dt>
-<dd><p>Report the amount of the payments you allocated or reallocated <strong>during the year </strong> under a <abbr title="Deferred profit sharing plan">DPSP</abbr> or a revoked plan to a person for:</p>
+<dt>Non-resident services</dt>
+<dd></dd>
+
+<dt><abbr title="Registered pension plan">RPP</abbr></dt>
+<dd></dd>
+
+<dt>Accrued to December 31, 1971</dt>
+<dd>Report lump-sum payments you made out of <abbr title="registered pension plan">RPP</abbr>s and <abbr title="Deferred profit sharing plan">DPSP</abbr>s accrued to December 31, 1971 using box 018 <strong>and</strong> <a href="#cd110">code 110</a>. </dd>
+
+<dt>Lump-sum payments that you cannot transfer elsewhere</dt>
+<dd></dd>
+
+<dt><abbr title="Deferred profit sharing plan">DPSP</abbr></dt>
+<dd><p>Report the amount of the payments you allocated or reallocated <strong>during the year </strong> under a deferred profit sharing plan (<abbr title="Deferred profit sharing plan">DPSP</abbr>) or a revoked plan to a person for:</p>
 <ul>
 <li>Employer contributions made to the plan after December 1, 1982</li>
 <li>Amounts forfeited in the plan if these amounts are withdrawn from the plan during the year</li>
 </ul>
 <p><strong>Do not</strong> report the amount of the payments if you allocated an amount in a <strong>previous year</strong> and you made the payment in the current year using box 018, use <a href="#cd180">code 180</a>. </p>
 </dd>
-<dt>Non-registered plan</dt>
+
+<dt>Unregistered plan</dt>
 <dd>Report the payments you made from a pension fund or plan that is <strong>not</strong> registed using box 018 <strong>and</strong> <a href="#cd190">code 190</a>. </dd>
-<dt>Lump-sum payments – Accrued to December 31, 1971</dt>
-<dd>Report lump-sum payments you made out of <abbr title="registered pension plan">RPP</abbr>s and <abbr title="Deferred profit sharing plan">DPSP</abbr>s accrued to December 31, 1971 using box 018 <strong>and</strong> <a href="#cd110">code 110</a>. </dd>
-<dt>Amounts not eligible for transfer</dt>
-<dd></dd>
-<dt>Lump-sum payments – Non-resident</dt>
-<dd></dd>
-<dt>Lump-sum payments that you cannot transfer, that are not reported elsewhere</dt>
-<dd></dd>
-<dt>Lump-sum payments - Indian (exempt income)</dt>
-<dd></dd>
-<dt>Direct transfers</dt>
-<dd></dd>
+
+<dt>Indian (exempt income)</dt>
+<dd><strong>Do not</strong> report tax-exempt lump-sum payments you paid to a recipient who is registered, or entitled to be registered under the Indian Act using box 018, use <a href="#cd148">code 148</a>.
+</dd>
+
 </dl>
 
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/lumpsum.html">Lump-sum payments</a></p>     
@@ -472,7 +479,6 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 <li><strong>Lump-sum payments </strong>–<strong> non-resident</strong> – You may have paid superannuation or pension benefits to a Canadian resident under an unregistered pension plan for services that the person rendered in a period throughout which the person did not reside in Canada. If you paid the benefits in a <span class="nowrap">lump-sum,</span> report the amount in box&nbsp;<strong>018</strong>. The recipient may be able to transfer the amount to an RPP, SPP, PRPP or RRSP and deduct the amount of the transfer under paragraph&nbsp;60(j) if the conditions in that provision are satisfied. However, if you made such a direct transfer, report the amount in box&nbsp;<strong>018</strong>, and in Other information, enter code&nbsp;<strong>102</strong> and the amount of the transfer</li>
 <li>If you made payments out of an EBP that are not payments of superannuation or pension benefits, these should be reported on a T4 slip. Learn more: <a href="/cra-arc/payroll/file/t4slip.html">T4 slip - Information for employers</a></li>
 <li><strong>Lump-sum payments that you cannot transfer, that are not reported elsewhere</strong> – If you paid an amount that does not come from an RPP or a DPSP that is not eligible for transfer and that is not required to be reported elsewhere, report the amount in box&nbsp;<strong>018</strong> and in Other information, enter code&nbsp;<strong>158</strong> and the amount of the payment</li>
-<li><strong>Indian (exempt income) </strong>–<strong> lump-sum payments </strong>– Lump-sum payment income is usually exempt from tax when a person receives it as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt. Do not include the exempt income in box <strong>018</strong>. Instead, include it in Other informationusing code 148</li>
 </ul>         
   </details>
           </li>
@@ -507,16 +513,16 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 <dd>Report annuity payments you made under an income-averaging annuity contract (<abbr title="income-averaging annuity contract">IAAC</abbr>) using box 024 <strong>and</strong> <a href="#cd111">code 111</a>. </dd>
 
 <dt><abbr title="Variable payment life annuity">VPLA</abbr> </dt>
-<dd><strong>Do not</strong> report annuity payments you made under a variable payment life annuity (<abbr title="Variable payment life annuity">VPLA</abbr>), use <a href="#cd133">code 133</a>.</dd>
+<dd><strong>Do not</strong> report annuity payments you made under a variable payment life annuity (<abbr title="Variable payment life annuity">VPLA</abbr>) using box 024, use <a href="#cd133">code 133</a>.</dd>
 
 <dt>Pension or superannuation</dt>
-<dd><strong>Do not</strong> report annuity payments you paid to an employee, retired employee, or survivor or spouse of an employee out of, or under, a superannuation or pension fund or plan, including disability benefits paid&nbsp;as a life annuity, use <a href="#bx016">box 016</a>.</dd>
+<dd><strong>Do not</strong> report annuity payments you paid to an employee, retired employee, or survivor or spouse of an employee out of, or under, a superannuation or pension fund or plan, including disability benefits paid&nbsp;as a life annuity using box 024, use <a href="#bx016">box 016</a>.</dd>
 
 <dt>Life insurance policy </dt>
-<dd><strong>Do not</strong> report annuity payments for accrued income from a life insurance policy that you include when you calculate a person's income, use the <a href="/en/revenue-agency/services/forms-publications/forms/t5.html">T5 slip</a>.</dd>
+<dd><strong>Do not</strong> report annuity payments for accrued income from a life insurance policy that you include when you calculate a person's income using box 024, use the <a href="/en/revenue-agency/services/forms-publications/forms/t5.html">T5 slip</a>.</dd>
 
 <dt>Non-residents</dt>
-<dd><strong>Do not</strong> report annuity payments to a non-resident on an T4A slip, use the <a href="https://www.canada.ca/content/dam/cra-arc/formspubs/pbg/nr4/nr4-21e.pdf">NR4 slip</a>.</dd>
+<dd><strong>Do not</strong> report annuity payments to a non-resident using box 024, use the <a href="https://www.canada.ca/content/dam/cra-arc/formspubs/pbg/nr4/nr4-21e.pdf">NR4 slip</a>.</dd>
 </dl>
  
 <p>Learn more on the tax treatement of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/annuity.html">Annuity payments </a> </p>
@@ -862,15 +868,23 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 146 – Indian (exempt income) – Pension or superannuation</summary> 
-  <p  id="cd146">Pension or superannuation income is usually exempt from tax when a person receives&nbsp;them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt. Report the exempt income using code <strong>146</strong>. Do not report this amount in box 016.</p> 
+ <details>  <summary>Code 146 – Indian (exempt income) – Pension or superannuation <span class="label label-warning">Jeremiah</span></summary> 
+<p  id="cd146">Report the tax-exempt pension or superannuation income you paid to a recipient who is registered, or entitled to be registered under the Indian Act.</p>
+<p>Generally, income is exempt from tax when a person receives&nbsp;them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p> 
+<p><strong>Do not</strong> report this amount in box 016.</p> 
+<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
  </details> 
 </li>
+
 <li class="code-num">
- <details>  <summary>Code 148 – Indian (exempt income) – Lump-sum payments</summary> 
-  <p  id="cd148">Lump-sum payment income is usually exempt from tax when a person receives&nbsp;them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt. Report this amount using code <strong>148</strong>. Do not report this amount in box 018.</p> 
+ <details>  <summary>Code 148 – Indian (exempt income) – Lump-sum payments <span class="label label-warning">Jeremiah</span></summary> 
+<p  id="cd148">Report the tax-exempt lump-sum payment you paid to a recipient who is registered, or entitled to be registered under the Indian Act.</p>
+<p>Generally, income is exempt from tax when a person receives&nbsp;them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p> 
+<p><strong>Do not</strong> report this amount in box 018.</p> 
+<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
  </details> 
 </li>
+
 <li class="code-num">
  <details>  <summary>Code 150 – Labour Adjustment Benefits Act and Appropriation Acts</summary> 
   <p  id="cd150">Report payments under the Labour Adjustment Benefits Act or a benefit payable under the Appropriation Acts to compensate for loss of office or employment, such as in the textile and <span class="nowrap">leather-tanning</span> industries.</p> 
