--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -503,7 +503,7 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 
 <dt><abbr title="Advanced life deferred annuity">ALDA</abbr> </dt>
 <dd><p>Report <strong>only</strong> annuity payments from an advanced life deferred annuity (<abbr title="Advanced life deferred annuity">ALDA</abbr>) using box 024.</p>
-<p><strong>Do not</strong> report total <strong>annuity purchased</strong> using box 024, use <a href="#cd037">code 037</a>. </p>
+<p><strong>Do not</strong> report total <strong>annuity amounts transferred from a money purchase of <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Pool registered pension plan">PRPP</abbr> or <abbr title="Deferred profit sharing plan">DPSP</abbr> </strong> using box 024, use <a href="#cd037">code 037</a>. </p>
 </dd>
 
 <dt><abbr title="Deferred profit sharing plan">DPSP</abbr></dt>
@@ -519,13 +519,13 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 <dd><strong>Do not</strong> report annuity payments you paid to an employee, retired employee, or survivor or spouse of an employee out of, or under, a superannuation or pension fund or plan, including disability benefits paid&nbsp;as a life annuity using box 024, use <a href="#bx016">box 016</a>.</dd>
 
 <dt>Life insurance policy </dt>
-<dd><strong>Do not</strong> report annuity payments for accrued income from a life insurance policy that you include when you calculate a person's income using box 024, use the <a href="/en/revenue-agency/services/forms-publications/forms/t5.html">T5 slip</a>.</dd>
+<dd><strong>Do not</strong> report annuity payments for accrued income from a life insurance policy that you include when you calculate a person's income using the T4a slip, use the <a href="/en/revenue-agency/services/forms-publications/forms/t5.html">T5 slip</a>.</dd>
 
 <dt>Non-residents</dt>
-<dd><strong>Do not</strong> report annuity payments to a non-resident using box 024, use the <a href="https://www.canada.ca/content/dam/cra-arc/formspubs/pbg/nr4/nr4-21e.pdf">NR4 slip</a>.</dd>
+<dd><strong>Do not</strong> report annuity payments to a non-resident using the T4a slip, use the <a href="https://www.canada.ca/content/dam/cra-arc/formspubs/pbg/nr4/nr4-21e.pdf">NR4 slip</a>.</dd>
 </dl>
  
-<p>Learn more on the tax treatement of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/annuity.html">Annuity payments </a> </p>
+<p>Learn more on the tax treatment of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/annuity.html">Annuity payments </a> </p>
 
                 </details>
             </li>
