--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -503,14 +503,14 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 
 <dt><abbr title="Advanced life deferred annuity">ALDA</abbr> </dt>
 <dd><p>Report <strong>only</strong> annuity payments from an advanced life deferred annuity (<abbr title="Advanced life deferred annuity">ALDA</abbr>) using box 024.</p>
-<p><strong>Do not</strong> report total <strong>annuity amounts transferred from a money purchase of <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Pool registered pension plan">PRPP</abbr> or <abbr title="Deferred profit sharing plan">DPSP</abbr> </strong> using box 024, use <a href="#cd037">code 037</a>. </p>
+<p><strong>Do not</strong> report total <strong>annuity amounts transferred from a money purchase </strong> of <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Pool registered pension plan">PRPP</abbr> or <abbr title="Deferred profit sharing plan">DPSP</abbr> using box 024, use <a href="#cd037">code 037</a>. </p>
 </dd>
-
-<dt><abbr title="Deferred profit sharing plan">DPSP</abbr></dt>
-<dd>Report instalment or annuity payments you made under a deferred profit sharing plan (<abbr title="Deferred profit sharing plan">DPSP</abbr>) using box 024 <strong>and</strong> <a href="#cd115">code 115</a>. </dd>
 
 <dt><abbr title="Income-averaging annuity contract">IAAC</abbr></dt>
 <dd>Report annuity payments you made under an income-averaging annuity contract (<abbr title="income-averaging annuity contract">IAAC</abbr>) using box 024 <strong>and</strong> <a href="#cd111">code 111</a>. </dd>
+
+<dt><abbr title="Deferred profit sharing plan">DPSP</abbr></dt>
+<dd>Report instalment or annuity payments you made under a deferred profit sharing plan (<abbr title="Deferred profit sharing plan">DPSP</abbr>) using box 024 <strong>and</strong> <a href="#cd115">code 115</a>. </dd>
 
 <dt><abbr title="Variable payment life annuity">VPLA</abbr> </dt>
 <dd><strong>Do not</strong> report annuity payments you made under a variable payment life annuity (<abbr title="Variable payment life annuity">VPLA</abbr>) using box 024, use <a href="#cd133">code 133</a>.</dd>
@@ -631,8 +631,8 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 </li>
 <li class="code-num"> 
  <details >  <summary>Code 037 – Advanced life deferred annuity purchase <span class="label label-warning">Jeremiah</span></summary> 
-  <p id="cd037">Report the total amount for the <abbr title="Advanced life deferred annuity">ALDA</abbr> purchased. </p> 
-<p>If an amount exceeding the individual’s lifetime limit has been purchased, the excess amount that is transferred back to a qualified registered plan must be reported as a negative amount in this box.</p> 
+  <p id="cd037">Report the total <abbr title="Advanced life deferred annuity">ALDA</abbr> amounts <strong>transferred from a money purchase </strong> of <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Pool registered pension plan">PRPP</abbr> or <abbr title="Deferred profit sharing plan">DPSP</abbr>.</p> 
+<p>If an amount exceeding the individual’s lifetime limit has been purchased, the excess amount that is transferred back to a qualified registered plan must be reported as a <strong>negative amount</strong> in this box.</p> 
 <p><strong>Do not</strong> report annuity payments from an <abbr title="Advanced life deferred annuity">ALDA</abbr> using code 037, use <a href="#bx024">box 024</a>.</p>
   </details> 
   </li>
