--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -440,7 +440,9 @@
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Non-resident services</dt>
-<dd></dd>
+<dd>Report amount paid for superannuation or pension benefits to a Canadian resident under an unregistered pension plan for services that the person rendered in a period throughout which the person did not reside in Canada. If you paid the benefits in a lump-sum
+
+</dd>
 
 <dt><abbr title="Registered pension plan">RPP</abbr></dt>
 <dd></dd>
@@ -461,18 +463,20 @@
 </dd>
 
 <dt>Unregistered plan</dt>
-<dd>Report the payments you made from a pension fund or plan that is <strong>not</strong> registed using box 018 <strong>and</strong> <a href="#cd190">code 190</a>. </dd>
+<dd>Report the pension benefits you paid from a pension fund or plan that is <strong>not</strong> registed using box 018 <strong>and</strong> <a href="#cd190">code 190</a>. </dd>
 
 <dt>Indian (exempt income)</dt>
 <dd><strong>Do not</strong> report tax-exempt lump-sum payments you paid to a recipient who is registered, or entitled to be registered under the Indian Act using box 018, use <a href="#cd148">code 148</a>.
 </dd>
 
+<dt>Direct transfers</dt>
+<dd><strong>Do not</strong> report direct transfers of <abbr title="Registered pension plan">RPP</abbr> or <abbr title="Deferred profit sharing plan">DPSP</abbr> lump-sum payments to <abbr title="Registered retirement savings plan">RRSP</abbr>s, <abbr title="Simplified pension plan">SPP</abbr>s, <abbr title="Pooled registered pension plan">PRPP</abbr>s, <abbr title="Registered retirement income fund">RRIF</abbr>s, or other <abbr title="Registered pension plan">RPP</abbr>s/<abbr title="Deferred profit sharing plan">DPSP</abbr> that are transferred according to subsections&nbsp;147.3(1) to (8) or subsection 147(19).
+</dd>
 </dl>
 
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/lumpsum.html">Lump-sum payments</a></p>     
 
 <ul>
-<li><strong>Direct transfers </strong>– Do not include direct transfers of RPP lump-sum payments to <abbr title="registered retirement savings plan">RRSP</abbr>s, <abbr title="simplified pension plan">SPP</abbr>s, <abbr title="pooled registered pension plan">PRPP</abbr>s, <abbr title="registered retirement income fund">RRIF</abbr>s, or other RPPs that are transferred according to subsections&nbsp;147.3(1) to (8) of the Income Tax Act (ITA). Similarly, do not report direct transfers of DPSP <span class="nowrap">lump-sum</span> payments to&nbsp;RRSPs, SPPs, PRPPs, RRIFs, or other DPSPs that are transferred according to subsection&nbsp;147(19) of the ITA. These amounts are not reported when they are directly transferred under these subsections, and the receiving carrier should not issue receipts. You can use <a href="/en/revenue-agency/services/forms-publications/forms/t2151.html">Form T2151, Direct Transfer of a Single Amount Under Subsection 147(19) or Section 147.3</a>, to document these direct transfers</li>
 <li><strong>Amounts not eligible for transfer</strong> – Amounts transferred that are&nbsp;greater than the amounts allowed under subsections&nbsp;147.3(1) to (8) or 147(19) of the&nbsp;ITA are considered income in the year they are transferred. Report such amounts in box&nbsp;<strong>018</strong>. The receiving carrier should issue a receipt for these excess transfers<br>
 If you paid a single amount out of an RPP or a DPSP to an individual or you transferred such an amount that we consider to be income, you must report this amount in Other information, using code&nbsp;<strong>108</strong> for an RPP and code <strong>180</strong> for a DPSP</li>
 
@@ -923,7 +927,7 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
  </li>
 <li class="code-num">
 <details>  <summary>Code 190 – Lump-sum payments from an unregistered plan <span class="label label-warning">Jeremiah</span></summary> 
-<p  id="cd190">Report the payments you made from a pension fund or plan that is <strong>not</strong> registed using code 190 <strong>and</strong> <a href="#bx018">box 018</a>. </p> 
+<p  id="cd190">Report the pension benefits you paid from a pension fund or plan that is <strong>not</strong> registed using code 190 <strong>and</strong> <a href="#bx018">box 018</a>. </p> 
  </details> 
 </li>
 <li class="code-num">
