--- a/subway/uht/whomust.html
+++ b/subway/uht/whomust.html
@@ -817,11 +817,19 @@ margin-left: 38px;
 		 </details>	
 		 <br>
 				<p>If you are not an <strong>excluded owner</strong> (not subject to the tax) we refer to you as an <strong>affected owner</strong> (subject to the tax).</p>
-<p>If you are an affected owner, you have to file an annual return for each of your residential properties. Whether you have to pay the underused housing tax for the residential property depends on whether your ownership of the residential property is exempt from the tax for a calendar year.</p>
+<details>
+	<summary>[Content to go through]</summary>
+		 
+		 
+		 <p>If you are an affected owner, you have to file an annual return for each of your residential properties. Whether you have to pay the underused housing tax for the residential property depends on whether your ownership of the residential property is exempt from the tax for a calendar year.</p>
 		 <p>Even if your ownership of a residential property is exempt from the underused housing tax for a calendar year, if you are an affected owner, you still have to file a return for the residential property and indicate the applicable exemption in your return.</p>
-
+<p>In most situations, if you are an affected owner you must pay the Underused Housing Tax for the calendar year for each residential property you own on December 31. However, if your ownership qualifies for an exemption, you will not have to pay the tax for the calendar year.</p>
+	<p>Even if your ownership of a residential property qualifies for an exemption for the calendar year, you must still file an annual return for the property for the calendar year.</p>
 <p>If you are uncertain about your obligations and liabilities under the UHTA, you may request a ruling or interpretation about how the tax applies to your specific situation.</p>
 		 
+		 <p>If you are an affected owner of a residential property, you must file a return for the Underused Housing Tax. You must also pay the 1% tax unless your ownership of the property qualifies for an exemption.</p>
+	<p>[Remember that even if you do not have to pay the Underused Housing Tax because your ownership of a residential property qualifies for an exemption for a calendar year, you still have to file an annual return for the property for the calendar year.] - repeated in tool</p>
+		 </details>
 		 
 		 
 		 
