--- a/subway/uht/downloadcomplete.html
+++ b/subway/uht/downloadcomplete.html
@@ -819,14 +819,15 @@ margin-left: 38px;
         <p>If you are an individual who is <strong>not a Canadian citizen or permanent resident</strong>, and you already have a SIN, you must use your SIN to file your return.</p>
         <p>If you <strong>do not have a SIN</strong>, you <strong>must use an ITN</strong> to file your return. If you do not have an ITN, you must apply for one.</p>
         <p>Download: <a href="https://canada.ca/en/revenue-agency/services/forms-publications/forms/t1261.html"><span class="far fa-file-alt fa-lg mrgn-rght-sm"></span>Application for a CRA individual tax number (ITN) for non-residents (Form T1261)</a></p>
-	  </details>
+<p>[Link to new ITN page]</p>	  
+</details>
         <details><summary>Tax identifier numbers for corporations</summary>
         <p>If you are a corporation, you must use a business number (BN) with an Underused Housing Tax (RU) program account identifier code to file your Underused Housing Tax return.</p>
         <p>If you already have a BN, you will have to register your RU program account before you can file your return.</p>
         <p>If you do not have a BN, you must apply for one <strong>and</strong> register your RU program account before you can file your return.</p>
         <p>You will be able to register your RU program account online after <strong><span class="nowrap">February 6, 2023</span></strong> through the following link:</p>
         <p><a href="https://canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html">How to register for a business number or CRA program account</a></p>
-       
+       <p>[Distinguish how to get an RU #]</p>
 	  </details>
 	 <h3>Multiple residential properties</h3>
         <p>If you are an affected owner who owns two or more residential properties in Canada on <span class="nowrap">December 31</span>, you must file a separate Underused Housing Tax return for each property.</p>	  
