--- a/subway/uht/filereturn.html
+++ b/subway/uht/filereturn.html
@@ -866,8 +866,23 @@ margin-left: 38px;
           </div>
         </dd>
       </dl>	  
+<details>
+	<summary>[How to file an election]</summary>
+	
+			<p>You may want to file an election for <strong>either of the following</strong> reasons:</p>
+			<ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
+  <li class="cnjnctn-col-75">
+    <p>To calculate the tax you owe using the fair market value of a residential property.</p>
+  </li>
+  <li class="cnjnctn-col">
+    <p>To qualify for the exemption for primary place of residence or the exemption for qualifying occupancy, if among you and your spouse or common-law partner you own multiple residential properties.</p>
+  </li>
+</ul>
 
+<p>To file an election for either reason: <a href="/content/canadasite/">Underused Housing Tax Return and Election Form (Form UHT-2900)</a>.</p>
+<p>An owner electing to use fair market value has to get an appraisal of the property. The fair market value of your residential property must be determined by an accredited, professional, real estate appraiser operating at arm’s length to the owner. The intended use of the appraisal report must be to help in the administration of the Underused Housing Tax Act. </p>
 
+</details>
      <h2 id="h_5">Due date to file the return or an election</h2>
 	
 	<p><span class="h4"><span class="fas fa-calendar-day fa-lg mrgn-rght-sm"></span>April 30</span> is the date:</p>		  
