--- a/subway/uht/paytax.html
+++ b/subway/uht/paytax.html
@@ -872,7 +872,7 @@ margin-left: 38px;
 
 
 <ul class="pager">
-  <li class="next"><a href="/en/services/taxes/excise-taxes-duties-and-levies/underused-housing-tax/contact-cra.html" rel="next">Contact us about the Underused Housing Tax</a></li>
+  <li class="next"><a href="/en/services/taxes/excise-taxes-duties-and-levies/underused-housing-tax/contact-cra.html" rel="next">Contact us</a></li>
 </ul>
 
 </div>
