--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -444,14 +444,17 @@
 
 </dd>
 
-<dt><abbr title="Registered pension plan">RPP</abbr></dt>
-<dd></dd>
-
 <dt>Accrued to December 31, 1971</dt>
 <dd>Report lump-sum payments you made out of <abbr title="registered pension plan">RPP</abbr>s and <abbr title="Deferred profit sharing plan">DPSP</abbr>s accrued to December 31, 1971 using box 018 <strong>and</strong> <a href="#cd110">code 110</a>. </dd>
 
-<dt>Lump-sum payments that you cannot transfer elsewhere</dt>
-<dd></dd>
+<dt>Amounts not eligible for transfer</dt>
+<dd><p>Report amounts you transferred that are greater than the amounts allowed under subsections 147.3(1) to (8) or 147(19) of the Income Tax Act that are considered income in the year they are transferred using box 018.</p>
+<p>Report single payments you made that you <strong>cannot transfer</strong> from the following plans :</p>
+<ul>
+<li><abbr title="Registered pension plan">RPP</abbr> using box 018 <strong>and</strong> <a href="#cd108">code 108</a></li>
+<li><abbr title="Deferred profit sharing plan">DPSP</abbr> using box 018 <strong>and</strong> <a href="#cd180">code 180</a></li> 
+</ul>
+</dd>
 
 <dt><abbr title="Deferred profit sharing plan">DPSP</abbr></dt>
 <dd><p>Report the amount of the payments you allocated or reallocated <strong>during the year </strong> under a deferred profit sharing plan (<abbr title="Deferred profit sharing plan">DPSP</abbr>) or a revoked plan to a person for:</p>
@@ -477,8 +480,6 @@
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/lumpsum.html">Lump-sum payments</a></p>     
 
 <ul>
-<li><strong>Amounts not eligible for transfer</strong> – Amounts transferred that are&nbsp;greater than the amounts allowed under subsections&nbsp;147.3(1) to (8) or 147(19) of the&nbsp;ITA are considered income in the year they are transferred. Report such amounts in box&nbsp;<strong>018</strong>. The receiving carrier should issue a receipt for these excess transfers<br>
-If you paid a single amount out of an RPP or a DPSP to an individual or you transferred such an amount that we consider to be income, you must report this amount in Other information, using code&nbsp;<strong>108</strong> for an RPP and code <strong>180</strong> for a DPSP</li>
 
 <li><strong>Lump-sum payments </strong>–<strong> non-resident</strong> – You may have paid superannuation or pension benefits to a Canadian resident under an unregistered pension plan for services that the person rendered in a period throughout which the person did not reside in Canada. If you paid the benefits in a <span class="nowrap">lump-sum,</span> report the amount in box&nbsp;<strong>018</strong>. The recipient may be able to transfer the amount to an RPP, SPP, PRPP or RRSP and deduct the amount of the transfer under paragraph&nbsp;60(j) if the conditions in that provision are satisfied. However, if you made such a direct transfer, report the amount in box&nbsp;<strong>018</strong>, and in Other information, enter code&nbsp;<strong>102</strong> and the amount of the transfer</li>
 <li>If you made payments out of an EBP that are not payments of superannuation or pension benefits, these should be reported on a T4 slip. Learn more: <a href="/cra-arc/payroll/file/t4slip.html">T4 slip - Information for employers</a></li>
@@ -704,9 +705,10 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
   </li>
 <li class="code-num">
  <details >  <summary>Code 108 – Lump-sum payments from a registered pension plan (RPP) that you cannot transfer</summary> 
-  <p id="cd108">Learn more: Amounts not eligible for transfer in Box 018&nbsp;–&nbsp;Lump-sum payments</p> 
+  <p id="cd108">Report single payments you made that you <strong>cannot transfer</strong> from a <abbr title="Registered pension plan">RPP</abbr> using code 108 <strong>and</strong> <a href="#bx018">box 018</a></p>
  </details>
 </li>
+
 <li class="code-num"> 
  <details >  <summary>Code 109 – Periodic payments from an unregistered plan</summary> 
   <p id="cd109">Enter pension benefits you paid from a pension fund or plan that is not registered.</p> 
@@ -918,13 +920,15 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
   <p  id="cd162">Learn more: Code 032 – Registered pension plan contributions (past service).</p> 
  </details> 
 </li>
+
 <li class="code-num">
  <details>  <summary>Code 180 – Lump-sum payments from a deferred profit-sharing plan (DPSP) that you cannot transfer <span class="label label-warning">Jeremiah</span></summary> 
- <p id="cd180">Report the amount of the payments if you allocated an amount in a <strong>previous year</strong> and you made the payment in the current year.</p>
-
+ <p id="cd180">Report single payments you made that you <strong>cannot transfer</strong> from a <abbr title="Deferred profit sharing plan">DPSP</abbr> using code 180 <strong>and</strong> <a href="#bx018">box 018</a></p>
+<p>You also have to report the amount of the payments if you allocated an amount in a <strong>previous year</strong> and you made the payment in the current year.</p>
 <p><strong>Do not</strong> report the amount of the payments you allocated or reallocated <strong>dring the year</strong> under a <abbr title="Deferred profit sharing plan">DPSP</abbr> or a revoked plan using code 180, use <a href="#bx018">box 018</a>. </p>
- </details> 
- </li>
+</details> 
+</li>
+
 <li class="code-num">
 <details>  <summary>Code 190 – Lump-sum payments from an unregistered plan <span class="label label-warning">Jeremiah</span></summary> 
 <p  id="cd190">Report the pension benefits you paid from a pension fund or plan that is <strong>not</strong> registed using code 190 <strong>and</strong> <a href="#bx018">box 018</a>. </p> 
