--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -440,8 +440,11 @@
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Non-resident services</dt>
-<dd>Report amount paid for superannuation or pension benefits to a Canadian resident under an unregistered pension plan for services that the person rendered in a period throughout which the person did not reside in Canada. If you paid the benefits in a lump-sum
+<dd><p>Report amount paid for superannuation or pension benefits to a Canadian resident under an unregistered pension plan for services that the person rendered in a period throughout which the person did not reside in Canada using box 018.</p>
 
+<p>Report lump-sum payments you made for non-resident services transferred under paragraph 60(j) using box 018 <strong>and</strong> <a href="#cd102">code 102</a>.</p>
+
+<p><strong>Do not</strong> report the payments out of an <abbr title="Employee benefit plan">EBP</abbr> that are <strong>not</strong> payments of superannuation or pension benefits using box 018, use the <a href="/cra-arc/payroll/file/t4slip.html">T4 slip</a></p>
 </dd>
 
 <dt>Accrued to December 31, 1971</dt>
@@ -481,8 +484,6 @@
 
 <ul>
 
-<li><strong>Lump-sum payments </strong>–<strong> non-resident</strong> – You may have paid superannuation or pension benefits to a Canadian resident under an unregistered pension plan for services that the person rendered in a period throughout which the person did not reside in Canada. If you paid the benefits in a <span class="nowrap">lump-sum,</span> report the amount in box&nbsp;<strong>018</strong>. The recipient may be able to transfer the amount to an RPP, SPP, PRPP or RRSP and deduct the amount of the transfer under paragraph&nbsp;60(j) if the conditions in that provision are satisfied. However, if you made such a direct transfer, report the amount in box&nbsp;<strong>018</strong>, and in Other information, enter code&nbsp;<strong>102</strong> and the amount of the transfer</li>
-<li>If you made payments out of an EBP that are not payments of superannuation or pension benefits, these should be reported on a T4 slip. Learn more: <a href="/cra-arc/payroll/file/t4slip.html">T4 slip - Information for employers</a></li>
 <li><strong>Lump-sum payments that you cannot transfer, that are not reported elsewhere</strong> – If you paid an amount that does not come from an RPP or a DPSP that is not eligible for transfer and that is not required to be reported elsewhere, report the amount in box&nbsp;<strong>018</strong> and in Other information, enter code&nbsp;<strong>158</strong> and the amount of the payment</li>
 </ul>         
   </details>
@@ -675,10 +676,11 @@
  </details> 
 </li>
 <li class="code-num">
- <details >  <summary>Code 102 – Lump-sum payments – non-resident services transferred under paragraph 60(j)</summary> 
-  <p id="cd102">Learn more: Lump-sum payments&nbsp;– non-resident in code box 018&nbsp;– Lump-sum payments</p> 
+ <details >  <summary>Code 102 – Lump-sum payments – non-resident services transferred under paragraph 60(j) <span class="label label-warning">Jeremiah</span></summary> 
+  <p id="cd102">Report lump-sum payments you made for non-resident services transferred under paragraph 60(j) using code 102  <strong>and</strong> <a href="#bx018">box 018</a>.</p>
  </details> 
 </li>
+
 <li class="code-num">
  <details >  <summary>Code 104 – Research grants <span class="label label-warning">Jeremiah</span></summary> 
   <p id="cd104">Report the full amount of the research grant you paid to the recipient.</p> 
@@ -704,7 +706,7 @@
   </details> 
   </li>
 <li class="code-num">
- <details >  <summary>Code 108 – Lump-sum payments from a registered pension plan (RPP) that you cannot transfer</summary> 
+ <details >  <summary>Code 108 – Lump-sum payments from a registered pension plan (RPP) that you cannot transfer <span class="label label-warning">Jeremiah</span></summary> 
   <p id="cd108">Report single payments you made that you <strong>cannot transfer</strong> from a <abbr title="Registered pension plan">RPP</abbr> using code 108 <strong>and</strong> <a href="#bx018">box 018</a></p>
  </details>
 </li>
