--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
@@ -502,9 +502,9 @@ margin-left: 38px;
 <h2 id="h7">Third-party payments</h2>
 <p>A third-party payment for SR&amp;ED work carried out in Canada during the tax year may be claimed as an allowable expenditure if:</p>
             <ul>
-		    <li>the work is done by an approved entity or an third-party entity</li>
+		    <li>the work is done by an approved entity or an third-party entity accepted by the CRA</li>
  <details>
-  <summary>Review approved entities and third-party entities</summary>
+  <summary>Review CRA approved entities and third-party entities</summary>
 	 <p><strong>Approved entities</strong></p>
 	 <ul>
               
