--- a/sred/scientific-research-experimental-development-tax-incentive-program/after.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/after.html
@@ -127,7 +127,7 @@
 		 <p>If you have concerns during your review, refer to <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/guidelines-resolving-claimants-concerns.html">Guidelines for resolving claimants&rsquo; SR&amp;ED concerns</a>.</p>
 
 <h2 id="h5">Disagreeing with our decision</h2>
-<p>After a decision on your SR&ED claim or claim review has been made, and you disagree with CRA’s decisions, you still have options.</p>
+<p>After CRA's decision on your SR&ED claim or claim review has been made, you still have options if you disagree.</p>
 <p>You have the right to object to the CRA&rsquo;s decision. You may file an objection up to 90&nbsp;days from the date of your Notice of assessment or reassessment.</p>
 <p>For more information about filing an objection, refer to the page <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/after-you-file-your-corporation-income-tax-return/resolving-disputes.html">Resolving disputes</a>.</p>
 <p>If you don&rsquo;t agree with the CRA&rsquo;s decision on your objection, you may then file  an appeal.</p>
