--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -452,15 +452,16 @@
 
 <dt>Amounts not eligible for transfer</dt>
 <dd><p>Report amounts you transferred that are greater than the amounts allowed under subsections 147.3(1) to (8) or 147(19) of the Income Tax Act that are considered income in the year they are transferred using box 018.</p>
-<p>Report single payments you made that you <strong>cannot transfer</strong> from the following plans :</p>
+<p>Report single payments you made that you <strong>cannot transfer</strong> :</p>
 <ul>
-<li><abbr title="Registered pension plan">RPP</abbr> using box 018 <strong>and</strong> <a href="#cd108">code 108</a></li>
-<li><abbr title="Deferred profit sharing plan">DPSP</abbr> using box 018 <strong>and</strong> <a href="#cd180">code 180</a></li> 
+<li>from <abbr title="Registered pension plan">RPP</abbr> using box 018 <strong>and</strong> <a href="#cd108">code 108</a></li>
+<li>from <abbr title="Deferred profit sharing plan">DPSP</abbr> using box 018 <strong>and</strong> <a href="#cd180">code 180</a></li> 
+<li>that is not required to be reported elsewhere using box 018 <strong>and</strong> <a href="#cd158">code 158</a></li>
 </ul>
 </dd>
 
 <dt><abbr title="Deferred profit sharing plan">DPSP</abbr></dt>
-<dd><p>Report the amount of the payments you allocated or reallocated <strong>during the year </strong> under a deferred profit sharing plan (<abbr title="Deferred profit sharing plan">DPSP</abbr>) or a revoked plan to a person for:</p>
+<dd><p>Report the amount of the payments you allocated or reallocated <strong>during the year </strong> under a deferred profit sharing plan (<abbr title="Deferred profit sharing plan">DPSP</abbr>) or a revoked plan to a person using box 018 for:</p>
 <ul>
 <li>Employer contributions made to the plan after December 1, 1982</li>
 <li>Amounts forfeited in the plan if these amounts are withdrawn from the plan during the year</li>
@@ -482,10 +483,6 @@
 
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/lumpsum.html">Lump-sum payments</a></p>     
 
-<ul>
-
-<li><strong>Lump-sum payments that you cannot transfer, that are not reported elsewhere</strong> – If you paid an amount that does not come from an RPP or a DPSP that is not eligible for transfer and that is not required to be reported elsewhere, report the amount in box&nbsp;<strong>018</strong> and in Other information, enter code&nbsp;<strong>158</strong> and the amount of the payment</li>
-</ul>         
   </details>
           </li>
 				<li class="box-num">  	  
@@ -913,9 +910,9 @@
  </details> 
  </li>
 <li class="code-num">
-<details>  <summary>Code 158 – Lump-sum payments that you cannot transfer that are not reported elsewhere</summary> 
- <p  id="cd158">Learn more: Special situations in box 018 - Lump-sum payments.</p>   
- </details> 
+<details>  <summary>Code 158 – Lump-sum payments that you cannot transfer that are not reported elsewhere <span class="label label-warning">Jeremiah</span></summary> 
+  <p id="cd158">Report lump-sum payments that you <strong>cannot transfer</strong> that are not reported elsewhere using code 158 <strong>and</strong> <a href="#bx018">box 018</a>.</p>
+</details> 
  </li>
 <li class="code-num">
 <details>  <summary>Code 162 – Pre-1990 Past services contributions while not a contributor</summary> 
