--- a/sred/scientific-research-experimental-development-tax-incentive-program/after.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/after.html
@@ -124,7 +124,7 @@
 <p> We recommend senior technical and financial personnel be available to provide in-depth knowledge of the work and the company&rsquo;s finances.</p>
 <p>The review may result in adjustments to your claim. We will provide you with a  report outlining the outcome.</p>
 <p>For detailed information about the technical review, refer to <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/technical-review-a-guide-claimants.html">The  SR&amp;ED Technical Review: A Guide for Claimants</a>.</p>
-		 <p>If you have concerns during your review, refer to <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/guidelines-resolving-claimants-concerns.html">Guidelines for resolving claimants&rsquo; SR&amp;ED concerns</a>.</p>
+		 <p>If you have concerns during your review, first speak to the Research and Technology Advisor and/or Financial Reviewer reviewing your claim. If your concern is still not resolved, then contact the Research and Technology Manager and/or Financial Review Manager. For further details, refer to <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/guidelines-resolving-claimants-concerns.html">Guidelines for resolving claimants&rsquo; SR&amp;ED concerns</a>.</p>
 
 <h2 id="h5">Disagreeing with our decision</h2>
 <p>After CRA's decision on your SR&ED claim or claim review has been made, you still have options if you disagree.</p>
