--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -835,7 +835,8 @@
 <li class="code-num">
 <details >  <summary>Code 133 – Variable pension benefits <span class="label label-warning">Jeremiah</span></summary> 
   <p id="cd133">Report variable payment life annuity (<abbr title="Variable payment life annuity">VPLA</abbr>) paid out of a money purchase from a <abbr title="registered pension plan">RPP</abbr> and a <abbr title="pool registered pension plan">PRPP</abbr>.</p>
- </details> 
+<p><strong>Do not</strong> report this amount using box 024.</p>
+</details> 
  </li>
 
 <li class="code-num">
