--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -935,8 +935,8 @@
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 194 – PRPP payments</summary> 
-  <p  id="cd194">Report the amount of the annuity payments from taxable income or withdrawals from a PRPP at any age.</p> 
+ <details>  <summary>Code 194 – PRPP payments <span class="label label-warning">Jeremiah</span></summary> 
+  <p  id="cd194">Report the amount of the annuity payments from taxable income or withdrawals from a pooled registered pension plan (<abbr title="Pooled registered pension plan">PRPP</abbr>) at any age using code 194 <strong>and</strong> <a href="#bx024">box 024</a>.</p> 
  </details> 
 </li>
 <li class="code-num">
